--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -5,100 +5,90 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="css/dashboard.css" media="screen,projection">
 
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   </head>
 
   <body>
+
     <nav>
-    <div class="nav-wrapper">
-      <a href="#!" class="brand-logo center">College Connect</a>
-      <ul id="slide-out" class="sidenav">
-        <li>
-          <div class="user-view">
-            <div class="background">
-              <img src="images/office.jpg">
+      <div class="nav-wrapper">
+        <a class="brand-logo center">College Connect</a>
+      <!--Side Bar: Pop-out-->
+        <ul id="slide-out" class="sidenav"><i class="material-icons prefix">menu</i>
+          <li>
+            <div class="user-view">
+              <div class="background">
+                <img src="images/office.jpg"> <!--add img src-->
+              </div>
+              <a href="#user"><img class="circle" src="images/yuna.jpg"></a> <!--add img src-->
+              <a href="#name"><span class="white-text name">First Last</span></a>
+              <a href="#email"><span class="white-text email">username@gmail.com</span></a>
             </div>
-            <a href="#user"><img class="circle" src="images/yuna.jpg"></a>
-            <a href="#name"><span class="white-text name">First Last</span></a>
-            <a href="#email"><span class="white-text email">username@gmail.com</span></a>
-          </div>
-        </li>
-        <li><a href="#!"><i class="material-icons">event_note</i>My Schedule</a></li>
-        <li><div class="divider"></div></li>
-        <li><a class="subheader">Let's Connect!</a></li>
-        <li><a class="waves-effect" href="#!">Host a Connect</a></li>
-        <li><a class-"waves-effect" href="#!">View a Connect</a></li>
-        <li><a class="waves-effect" href="#!">Join a Connect</a></li>
-      </ul>
-      <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+          </li>
+          <li><a href="myschedule.html"><i class="material-icons">event_note</i>My Schedule</a></li>
+          <li><div class="divider"></div></li>
+          <li><a class="subheader">Let's Connect!</a></li>
+          <li><a class="waves-effect" href="#!">Host a Connect</a></li>
+          <li><a class-"waves-effect" href="#!">View a Connect</a></li>
+          <li><a class="waves-effect" href="#!">Join a Connect</a></li>
+        </ul>
 
+      <!--Menu Tab and Home Button-->
+        <ul class="left hide-on-med-and down">
+          <a href="#" data-target="mobile-demo" class="sideNav"><i class="material-icons">menu</i></a>
+        </ul>
+        <ul class="left hide-on-med-and down">
+          <a href="dashboard.html"><i class="material-icons prefix">home</i></a>
+        </ul>
 
-
-
-
-
-
-
-      <ul class="left hide-on-med-and down">
-        <a href="#" data-target="mobile-demo" class="sideNav"><i class="material-icons">menu</i></a>
-
-      </ul>
-
-      <ul class="left hide-on-med-and down">
-        <li><a href="dashboard.html"><i class="material-icons prefix">home</i></a></li>
-      </ul>
-      <ul class="right hide-on-med-and-down">
-        <li><a href="createconnect.html"><i class="material-icons prefix">add_alert</i></a></li>
-        <li><a href="messages.html"><i class="material-icons prefix">message</i></a></li>
-        <li><a href="userprofile.html"><i class="material-icons prefix">account_circle</i></a></li>
-        <li><a href="settings.html"><i class="material-icons prefix">settings</i></a></li>
-      </ul>
-    </div>
+      <!--Options Bar-->
+        <ul class="right hide-on-med-and-down">
+          <li><a href="/createconnect"><i class="material-icons prefix">add_alert</i></a></li>
+          <li><a href="/messages"><i class="material-icons prefix">message</i></a></li>
+          <li><a href="/profile"><i class="material-icons prefix">account_circle</i></a></li>
+          <li><a href="/settings"><i class="material-icons prefix">settings</i></a></li>
+        </ul>
+      </div>
     </nav>
 
-
-
-
-    <div class="container" style="margin-top: 25px">
-    <!-- Page Layout here -->
+  <!--Post Status Bar-->
+    <div class="cardpanel" style="padding-top: 15px">
       <div class="row">
-        <div class="col s11">
-      <!-- Grey navigation panel -->
-          <ul class="collection with-header">
-            <li class="collection-header"><h5>username</h5>
-              <form>
-                <div class="input-field">
-                  <input id="search" type="search" required>
-                  <label class="label-icon" for="search"><i class="material-icons">search</i></label>
-                  <i class="material-icons">close</i>
+        <div class="col s6 push-s3">
+          <div class="card-panel">
+            <div class="row">
+              <form class="col s12" action="/signup" method="post">
+                <div class="row">
+                  <div class="input-field col s12">
+                    <input id="status" type="text" class="validate" name="status">
+                    <label class="active" for="status">Write a Post <i class="material-icons">edit</i></label>
+                  </div>
                 </div>
               </form>
-            </li>
-          </ul>
-      </div>
-      <div class="row">
-        <div class="col s12 m6">
-          <div class="card">
-            <div class="card-image">
-              <img src="images/sample-1.jpg">
-              <span class="card-title">Card Title</span>
-              <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
-            </div>
-            <div class="card-content">
-              <p>NEW POST FROM USER</p>
             </div>
           </div>
         </div>
       </div>
+    </div>
 
-      <div class="col s9">
-    <!-- Teal page content  -->
-      </div>
 
+  <!--My Feed-->
+    <div class="cardpanel">
+      <div class="row">
+        <div class="col s6 push-s3">
+          <div class="card-panel">
+            <div class="row">
+              <p>This is a post</p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
+
+
 
 
     <!--JavaScript at end of body for optimized loading-->
@@ -114,14 +104,14 @@
       <div class="row">
         <div class="col l6 s12">
           <h5 class="white-text">College Connect</h5>
-          <p class="grey-text text-lighten-4">Created by CSSI_KIR: Tiasa, Zach, Najib</p>
+          <p class="grey-text text-lighten-4"></p>
         </div>
       </div>
     </div>
     <div class="footer-copyright">
       <div class="container">
-        © 2018 Copyright Text
-        <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+        © CSSI_KIR 2018 Copyright
+        <a class="grey-text text-lighten-4 right" href="#!">Meet the Creators</a></a>
       </div>
     </div>
   </footer>
