--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -12,7 +12,6 @@
   </head>
 
   <body>
-
     <nav>
       <div class="nav-wrapper">
         <a class="brand-logo center">College Connect</a>
@@ -94,7 +93,7 @@
     <!--JavaScript at end of body for optimized loading-->
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
-    <script type="text/javascript">
+    <script type="text/javascript" src="js/dashboard.js">
     $(".button-collapse").sideNav();
     </script>
   </body>
