--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -4,15 +4,15 @@
   <div class="container">
     <div class="row">
       <div class="col l6 s12">
-        <h5 class="white-text">College Connect</h5>
+        <h5 class="white-text">Somali Culture</h5>
         <p class="grey-text text-lighten-4"></p>
       </div>
     </div>
   </div>
   <div class="footer-copyright">
     <div class="container">
-      © CSSI_KIR 2018 Copyright
-      <a class="grey-text text-lighten-4 right" href="/aboutus">Meet the Creators</a></a>
+      © SC 2018 Copyright
+      <a class="grey-text text-lighten-4 right" href="/aboutus">Meet the Creator</a></a>
     </div>
   </div>
 </footer>
